--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Hanzo-AI",
+  "name": "hanzoai",
   "version": "0.0.1-alpha.1",
-  "description": "The official TypeScript library for the Hanzo API",
+  "description": "The official TypeScript library for the Hanzo AI API",
   "author": "Hanzo <dev@hanzo.ai>",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
